src-ken&y/objects/Customer_Invoice_Sub_Line__c.object
<CustomObject>
    <customHelpPage>HelpCustomerInvoice</customHelpPage>
    <fields>
        <fullName>Customer_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice Line</label>
        <referenceTo>Customer_Invoice_Line__c</referenceTo>
        <relationshipLabel>Customer Invoice Sub Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Sub_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Customer Invoice Sub Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Sub_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Invoice Sub Line</label>
    <nameField>
        <displayFormat>SUBL-{0000000}</displayFormat>
        <label>Customer Invoice Sub Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Invoice Sub Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>